edit resource and create resource form css and id change in edit resource. Also centered text in tabs on facepage and added space on prev/next buttons. Also fixed temporal css so date/day/time are visible.

--- a/static/css/ooinetLayout04.css
+++ b/static/css/ooinetLayout04.css
@@ -171,6 +171,60 @@ a:focus, object:focus {outline:none; -moz-outline-style:none}
   background: #384d68;
 }
 
+a.paginate_disabled_previous, a.paginate_disabled_next {
+    text-decoration: none;
+    background: none repeat scroll 0% 0% #96A8BC;
+    cursor: not-allowed;
+    text-shadow: none;
+    margin-right: 3px;}
+
+/* salt.css and bootstrap tabbed navigation overrides */
+.nav-tabs li a:hover, .nav-tabs li.active a:link, .nav-tabs > li > a, 
+.nav-tabs li a, .nav-tabs > li, .nav-tabs, .nav, ul.nav, ul.nav {text-align: center}
+ul.nav {margin: 0;}
+ul.nav {margin-top: 15px;}
+.nav-tabs, .nav {border-bottom: none;}
+.nav-tabs > li {border: none;margin-bottom: 0;}
+.nav-tabs li a {
+  background-color:#FFF;
+  border: none;
+  -webkit-border-radius: 3px 3px 0px 0px;
+  -moz-border-radius: 3px 3px 0px 0px;
+  border-radius: 3px 3px 0px 0px;
+  padding: 5px 30px 3px 10px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  color: #444;
+  letter-spacing:0px;
+  margin-right:10px;
+  margin-bottom: 0;
+}
+.nav-tabs > li > a {line-height: 16px; padding: 4px 14px;}
+.nav-tabs li.active a:link { 
+  border: none;
+  background: #384d68; /* Old browsers */
+  /* IE9 SVG, needs conditional override of 'filter' to 'none' */
+  -webkit-border-radius: 3px 3px 0px 0px;
+  -moz-border-radius: 3px 3px 0px 0px;
+  border-radius: 3px 3px 0px 0px;
+  border:none;
+  padding: 4px 14px;
+  font-size: 13px;
+  color:#BCBEC0;
+  line-height: 16px;
+  letter-spacing:0px;
+  margin-right: 10px;
+  margin-bottom:0;
+  color: #FFF;
+  text-shadow: none;
+}
+.nav-tabs li a:hover {
+  border: none;
+  background-color: #bcc1ce;
+  color: #000;
+}
+
 .row-fluid .span8 {width: 67%;}
 .v02 .block h3 {
 	padding: 5px 6px 5px 5px;
@@ -267,7 +321,7 @@ a:focus, object:focus {outline:none; -moz-outline-style:none}
  padding:0px;
  width:100%;
  height:40%;
- background-color: #DBDEE5;
+ background-color:#DBDEE5;
  z-index:4;
  overflow:auto;
 }
@@ -786,17 +840,9 @@ span#veLabel {line-height:20px; margin:5px 0px -6px 0px; padding:0px}
 span#toLabel {line-height:20px; margin:2px 0px -6px 0px; padding:0px}
 p#radiusLabel {line-height:22px; margin:1px 0px -7px 0px; padding:0px}
 
-select.dateMenu {
-  width: 54px;
-}
-
-select.dateMenu.day {
-  width: 45px;
-}
-
-select.dateMenu.hour {
-  width: 58px;
-}
+select.dateMenu {width:55px;}
+select.dateMenu.day {width:48px;}
+select.dateMenu.hour {width:56px;}
 
 .accordionContainer input {
   height: 16px;
@@ -804,7 +850,7 @@ select.dateMenu.hour {
   padding: 0px 2px;
   margin: 0px;
   font-family: Arial;
-  font-size: 12px; 
+  font-size: 11px; 
 }
 
 .accordionContainer select {
@@ -813,7 +859,7 @@ select.dateMenu.hour {
   padding: 0px;
   margin: 0px;
   font-family: Arial;
-  font-size: 12px; 
+  font-size: 11px; 
 }
 
 .leftNaviSelectContainer {
@@ -1116,42 +1162,12 @@ input.noPlaceholderRadius {
   background:#384d68;
 }
 
-#searchResultsContainer .jspVerticalBar {
-  right: 4px;
-}
-
-#searchResultsContainer .jspTrack {
-  background: none;
-}
-
-#searchResultsContainer .jspDrag {
-  background: #88A9CC;
-}
-
-.accordionContainer .jspVerticalBar {
-  right: 4px;
-}
-
-#searchResultsContainer .jspTrack {
-  background: none;
-}
-
-#searchResultsContainer .jspDrag {
-  background: #88A9CC;
-}
-
-.accordionContainer .jspVerticalBar {
-  right: 4px;
-}
-
-.accordionContainer .jspTrack {
-  background: none;
-}
-
-.accordionContainer .jspDrag {
-  background: #88A9CC;
-}
-
+#searchResultsContainer .jspVerticalBar {right: 4px;}
+#searchResultsContainer .jspTrack {background: none;}
+#searchResultsContainer .jspDrag {background: #88A9CC;}
+.accordionContainer .jspVerticalBar {right: 4px;}
+.accordionContainer .jspTrack {background: none;}
+.accordionContainer .jspDrag {background: #88A9CC;}
 .accordionContainerWhite {
   color: #000;
   position: relative;
@@ -1162,9 +1178,7 @@ input.noPlaceholderRadius {
   padding: 0px;
   overflow-x: hidden;
   z-index:8;
-  
 }
-
 .accordionWhiteChevron {
   position: absolute;
   right: 22px;
@@ -1197,15 +1211,13 @@ input.noPlaceholderRadius {
   width: 100%;
   margin: 0px;
   margin-bottom: 3px;
-  border: 1px solid #DBDEE5;
+  border: 0px solid #DBDEE5;
   border-radius: 5px;
   background-color:#FFFFFF;
 }
 
 /* regions */
-.map-ul a {
-  color: #fff;
-}
+.map-ul a {color: #fff;}
 
 .accordionWhiteLabel {
   padding: 5px 8px;
@@ -1269,6 +1281,7 @@ input.noPlaceholderRadius {
   display: inline-block;
   width: 105px;
   vertical-align: top;
+  font-size:13px
 }
 
 .form-horizontal .controls {
@@ -1277,15 +1290,14 @@ input.noPlaceholderRadius {
   display: inline-block;
 }
 .controls {padding: 10px 0px 0px 0px}
-#form-container .form-horizontal .controls select {
-  width: 91.1%;
-}
-#form-container .form-horizontal .controls input[type=text] {
-  width: 88.5%;
-}
-#form-container .form-horizontal .controls input {
-  width: 88.5%;
-}
+#form-container .form-horizontal .controls select {width: 91.1%;}
+#form-container .form-horizontal .controls input[type=checkbox] {width:42px}
+#form-container .form-horizontal .controls input[type=text] {width: 88.5%; margin-left:32px}
+#form-container .form-horizontal .controls input{width: 88.5%; margin-left:33px}
+#form-container .form-horizontal .controls textarea {width: 88.5%;}
+
+.form-horizontal .help-block {margin-bottom: 0;}
+.help-block {color: #595959; font-style:italic}
 
 .adminButtonGrey {
 	display: inline-block;
@@ -1365,7 +1377,7 @@ input.noPlaceholderRadius {
   z-index:8;
   overflow:hidden; /* Note: for a contained iframe at 100% height and width, must set overflow:hidden
   otherwise there will be 2 vertical scroll bars (might be a browser bug). */
-  background-color: #F4F4F4;
+  background-color:#F4F4F4;
 }
 
 .editResourceForm {
@@ -1373,8 +1385,8 @@ input.noPlaceholderRadius {
   min-height: 100%;
   width: 60%;
   min-width: 600px;
-  margin: 5px auto;
-  background-color: #F4F4F4;
+  margin: 0px auto;
+  background-color: none;
   border: 0px solid #efefef;
   border-radius: 6px;
   font-family: Arial;
